# bgen

./: .appveyor.yml  .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Dockerfile  FindZStd.cmake  GITHUB_URL  LICENSE  LICENSE.md  NAME  README.md  README.rst  VERSION  WELCOME  bgen-config.cmake.in  display_welcome.cmake  install  install-deps  install.bat  limix.cmake  tarball-release
.github/workflows/: cmake.yml  deploy.yml  test.yml
bgen/: CMakeLists.txt  bgen.c  bgen.h  bgen_file.c  code.h  file.h  impl_structs.h  layout1.c  layout1.h  layout2.c  layout2.h  sample.c  string.c  string.h  types.h  variant.c  variant_genotype.h  variant_genotype_fwd.h  variant_id_block.h  variant_indexing.h
bgen/util/: choose.c  choose.h  file.h  mem.h  zlib_wrapper.h  zstd_wrapper.h
bgen_reader/: CMakeLists.txt  bgen_file.c  bgen_file.h  bgen_reader.c  bgen_reader.h  bits.h  choose.h  file.c  file.h  layout1.c  layout1.h  layout2.c  layout2.h  list.h  mem.h  sample.c  sample.h  types.h  user_structs.h  util.h  variant.c  variant.h  variant_id_block.h
bgen_reader/util/: byte.h  choose.c  choose.h  list.h  mem.h  zlib_wrapper.h
build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/Testing/Temporary/: CTestCostData.txt
build2/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build2/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  complex  complex_index03.index  haplotype  index  metadata_example  pbgen_example  v12_zlib_layout2  zero_len_chrom_id
build2/test/data/: example.14bits.bgen.index  example.1bits.bgen.index  example.32bits.bgen.index  pbgen_example.pgen  zero_len_chrom_id.bgen
cmake/: FindATHR.cmake  FindOMEM.cmake  FindPROGRESSBAR.cmake  FindZSTD.cmake  limix.cmake  sanitizers.cmake
doc/: .gitignore  Doxyfile  Makefile  api.rst  api.rst.bak  conf.py  example.rst  examples.rst  index.rst  install.rst  interface.rst  make.bat  requirements.txt  session.py  usage.rst
example/: create_metafile.c  example  example.c  read_metadata.c  read_probability.c  read_samples.c
include/: CMakeLists.txt  bgen.h  depr.h  file.h  geno.h  meta.h  str.h
include/bgen/: api.h  bgen.h  bstring.h  depr.h  depr_bgen.h  depr_meta.h  file.h  geno.h  genotype.h  meta.h  metafile.h  metafile_04.h  number.h  partition.h  platform.h  samples.h  stdint.h  str.h  string.h  variant.h  variant_metadata.h
include/bgen_reader/: bgen_reader.h
src/: CMakeLists.txt  bgen.c  bgen.h  bgen_file.h  bits.h  bmath.h  bstring.c  bstring.h  buffer.c  buffer.h  choose.c  choose.h  endian.c  endian.h  file.c  file.h  free.h  geno.c  geno.h  genotype.c  genotype.h  index.c  index.h  io.c  io.h  layout1.c  layout1.h  layout2.c  layout2.h  layout_one.c  layout_one.h  layout_two.c  layout_two.h  math.h  mem.c  mem.h  meta.c  meta.h  metafile.c  metafile.h  (+35 more)
src/depr/: buffer.c  file.c  geno.c  tpl.c  variant.c  variant.h  variants_index.c  variants_index.h
src/layout/: one.c  one.h  two.c  two.h
src/tpl/: tpl.c
src/util/: bits.h  buffer.c  buffer.h  choose.c  choose.h  endian.c  endian.h  file.c  file.h  int.c  int.h  mem.c  mem.h  paul_stdint.h  print.h  stdint.h  str.c  str.h  string.c  string.h  tpl.c  tpl.h  zlib_wrapper.h
src/zip/: zlib.c  zlib.h  zlib_wrapper.c  zlib_wrapper.h  zstd.c  zstd.h  zstd_wrapper.c  zstd_wrapper.h
test/: .gitignore  CMakeLists.txt  assert_interface_2.c  assert_interface_3.c  assert_interface_3_complex.c  cache.c  cass.h  complex.c  example_files.c  example_files.h  haplotype.c  index.c  index3.c  metadata_example.c  open_genotype.c  pbgen_example.c  test_bgen.c  test_bgen_reader.c  test_load_cache.c  test_store.c  test_store_cache.c  test_v12_zlib_layout2.c  test_zero_len_chrom_id.c  v12_zlib_layout2.c  zero_len_chrom_id.c
test/data/: example.14bits.bgen.index  example.14bits.bgen.metadata  example.14bits.bgen.metadata.truncated  example.14bits.bgen.metafile  example.14bits.bgen.metafile.truncated  example.14bits.bgen.truncated  example.1bits.bgen.index  example.1bits.bgen.metadata  example.1bits.bgen.metafile  example.32bits.bgen.index  example.32bits.bgen.metadata  example.32bits.bgen.metafile  example.v11.bgen.index  random.bgen  random.bgen.metafile  roundtrip1.bgen  wrong.metafile
test/src/: assert_interface_2.c  assert_interface_3.c  assert_interface_3_complex.c  cass.h  complex.c  create_metafile.c  create_metafile_04.c  example_files.h  haplotype.c  index.c  metadata_example.c  one_million.c  open_genotype.c  pbgen_example.c  v12_zlib_layout2.c  variant_position_overflow.c  wrong_bgen_files.c  wrong_metadata_files.c  zero_len_chrom_id.c
travis/: install-zstd
