function(bgen_add_test name)
    add_executable(test_${name} src/${name}.c)
    target_link_libraries(test_${name} PRIVATE BGEN::bgen)
    add_test(NAME ${name} COMMAND test_${name} -E environment)

    # Ugly hacky to make the tests work on Windows.
    file(TO_CMAKE_PATH "$ENV{PATH}" PATH)
    list(APPEND PATH $<TARGET_FILE_DIR:ATHR::athr>)
    string(REPLACE ";" "\\;" PATH "${PATH}")
    set_tests_properties(${name} PROPERTIES ENVIRONMENT "PATH=${PATH}" )
endfunction()

bgen_add_test(v12_zlib_layout2)
bgen_add_test(zero_len_chrom_id)
bgen_add_test(pbgen_example)
bgen_add_test(metadata_example)
bgen_add_test(haplotype)
bgen_add_test(complex)
bgen_add_test(index)
bgen_add_test(open_genotype)
bgen_add_test(assert_interface_2)
bgen_add_test(assert_interface_3)
bgen_add_test(assert_interface_3_complex)
bgen_add_test(wrong_bgen_files)
bgen_add_test(wrong_metadata_files)

list(APPEND DATA_FILES example.matrix example.1bits.bgen)
list(APPEND DATA_FILES example.14bits.bgen example.32bits.bgen)
list(APPEND DATA_FILES example.v11.bgen)
list(APPEND DATA_FILES pbgen_example.pgen)
list(APPEND DATA_FILES zero_len_chrom_id.bgen)
list(APPEND DATA_FILES wrong.metadata)
list(APPEND DATA_FILES haplotypes.bgen)
list(APPEND DATA_FILES complex.23bits.bgen)
list(APPEND DATA_FILES example.14bits.bgen.truncated)
list(APPEND DATA_FILE random.bgen)
list(APPEND DATA_FILE random.bgen.metadata)
list(APPEND DATA_FILE example.14bits.bgen.metadata) 
list(APPEND DATA_FILE example.14bits.bgen.metadata.truncated) 
list(APPEND DATA_FILE example.32bits.bgen.metadata)
list(APPEND DATA_FILE example.1bits.bgen.metadata)

foreach(DATA_FILE ${DATA_FILES})
    file(COPY data/${DATA_FILE} DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/data")
endforeach()
